cleaned up and added play video(s) function

--- a/README
+++ b/README
@@ -10,4 +10,5 @@ TODO
 	-playlist support
 	-play oldest/newest unwatched
 	-Add a shell-like interface
+	-find a better way to determine playback completion
 	
